tests/should_fail/const_default.coma
module M_nat
  use creusot.int.UInt64
  use creusot.prelude.Any
  
  constant const_VALUE : UInt64.t
  
  meta "compute_max_steps" 1000000
  
  meta "select_lsinst" "all"
  
  let rec nat_N (return (x: ())) = (! bb0
    [ bb0 = s0 [ s0 = {[@expl:assertion] const_VALUE = (0: UInt64.t)} s1 | s1 = return {_ret} ] ]
    [ & _ret: () = Any.any_l () ]) [ return (result: ()) -> (! return {result}) ]
end
